@@ -19,15 +19,18 @@
       <div id="error"></div>
       
       <table>
-	<tr>
+	<tr style="vertical-align:top">
 	  <td class="optionname">Hotkey:</td>
 	  <td><input class=option name=hotkey id=hotkey></input></td>
 	  <td class=description>Syntax: [ctrl-][alt-][shift-]x where x is a single letter (a-z). (Only letters are supported in hotkeys.)</td>
 	</tr>
-	<tr>
+	<tr style="vertical-align:top">
 	  <td class="optionname">Macros:</td>
 	  <td><textarea class=option cols=50 rows=6 name=macros id=macros></textarea></td>
-	  <td class=description>TODO: Document</td>
+	  <td class=description>
+	    Macros for abbreviating common subformulas. One per line.
+	    See the <a href=https://github.com/dominique-unruh/mathquill-for-gmail/wiki/User-defined-macros>documentation.</a>
+	  </td>
 	</tr>
       </table>
     </form>
